feat: 完成阶段 2 开发，核心服务模块实现及安全修复
- 添加阶段 2 完成报告文档，包含项目统计、已完成工作、项目结构、核心工作流程等信息
- 实现开发启动脚本 (dev.sh)，包含虚拟环境检查、环境变量加载及服务启动
- 实现初始化脚本 (setup.sh)，包括 Python 版本检查、虚拟环境创建、依赖安装及 .env 文件生成
- 完成所有 P0 级别安全修复，包括 IP 白名单、CORS 配置及敏感信息隐藏

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,26 @@
 # GitHub 配置
-GITHUB_WEBHOOK_SECRET=your-webhook-secret-here
-GITHUB_TOKEN=ghp_your-token-here
-GITHUB_REPO_OWNER=your-username
-GITHUB_REPO_NAME=your-repo
+# ⚠️  请替换为实际值，不要直接使用示例值！
+GITHUB_WEBHOOK_SECRET=CHANGE_ME_GENERATE_STRONG_RANDOM_SECRET
+GITHUB_TOKEN=ghp_CHANGE_ME_YOUR_GITHUB_PERSONAL_ACCESS_TOKEN
+GITHUB_REPO_OWNER=CHANGE_ME_YOUR_GITHUB_USERNAME
+GITHUB_REPO_NAME=CHANGE_ME_YOUR_REPOSITORY_NAME
 
 # 代码仓库路径
-REPO_PATH=/path/to/your/local/repo
+# ⚠️  请替换为实际的本地仓库绝对路径
+REPO_PATH=/CHANGE_ME/absolute/path/to/your/local/repo
 
 # Anthropic API Key (Claude Code 需要)
-ANTHROPIC_API_KEY=sk-ant-your-key-here
+# ⚠️  请替换为实际的 Anthropic API Key
+ANTHROPIC_API_KEY=sk-ant-CHANGE_ME_YOUR_ANTHROPIC_API_KEY
 
 # 基本认证（可选）
+# ⚠️  如需启用，请设置强密码
 BASIC_AUTH_USERNAME=admin
-BASIC_AUTH_PASSWORD=your-secure-password
+BASIC_AUTH_PASSWORD=CHANGE_ME_SECURE_RANDOM_PASSWORD
 
 # Slack 通知（可选）
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/CHANGE_ME/WEBHOOK/URL
 
 # Telegram 通知（可选）
-TELEGRAM_BOT_TOKEN=your-bot-token
-TELEGRAM_CHAT_ID=your-chat-id
+TELEGRAM_BOT_TOKEN=CHANGE_ME_YOUR_BOT_TOKEN
+TELEGRAM_CHAT_ID=CHANGE_ME_YOUR_CHAT_ID
