--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,37 @@
 # FastAPI 和服务器
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+fastapi>=0.104.1,<0.106.0
+uvicorn[standard]>=0.24.0,<0.25.0
+python-multipart>=0.0.6,<0.1.0
 
 # GitHub API
-pygithub==2.1.1
+pygithub>=2.1.1,<3.0.0
 
 # Git 操作
-gitpython==3.1.40
+gitpython>=3.1.40,<4.0.0
 
 # 配置管理
-pyyaml==6.0.1
-python-dotenv==1.0.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pyyaml>=6.0.1,<7.0.0
+python-dotenv>=1.0.0,<2.0.0
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
 
 # 安全性
-cryptography==41.0.7
+cryptography>=41.0.7,<42.0.0
 
 # 测试
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-pytest-mock==3.12.0
+pytest>=7.4.3,<8.0.0
+pytest-asyncio>=0.21.1,<1.0.0
+pytest-cov>=4.1.0,<5.0.0
+pytest-mock>=3.12.0,<4.0.0
 
 # 开发工具
-pre-commit==3.6.0
-black==23.12.1
-flake8==6.1.0
-mypy==1.7.1
+pre-commit>=3.6.0,<4.0.0
+black>=23.12.1,<24.0.0
+flake8>=6.1.0,<7.0.0
+mypy>=1.7.1,<2.0.0
 
 # 日志
-structlog==23.2.0
+structlog>=23.2.0,<24.0.0
 
 # 可选: 监控
-prometheus-client==0.19.0
+prometheus-client>=0.19.0,<1.0.0
