Add comprehensive unit tests for WebhookHandler functionality
- Implement tests for initialization and service setup
- Cover event routing for handle_event method
- Test handling of Issue and Issue Comment events
- Validate AI development trigger logic
- Ensure proper logging and error handling throughout

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,9 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "auto"
+markers = [
+    "asyncio: mark test as async"
+]
 addopts = [
     "--cov=app",
     "--cov-report=term-missing",
