Add comprehensive tests for GitHub webhook signature verification
- Implement tests for various attack scenarios including signature forgery, replay attacks, tampering, and timing attacks.
- Ensure robust handling of edge cases such as empty or malformed signatures, and large payloads.
- Validate that secrets are not exposed in logs and that weak secrets are detected.
- Include concurrency tests to ensure thread safety during signature verification.
- Test handling of special characters in secrets and payloads containing Unicode.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,8 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "auto"
 markers = [
-    "asyncio: mark test as async"
+    "asyncio: mark test as async",
+    "e2e: mark test as end-to-end test"
 ]
 addopts = [
     "--cov=app",
