feat: 更新环境配置和文档，添加 Webhook 测试支持

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,383 @@
-# GitHub 配置
-# ⚠️  请替换为实际值，不要直接使用示例值！
+# ============================================================================
+# AI 开发调度服务 - 环境变量配置示例
+# ============================================================================
+#
+# 使用步骤：
+#   1. 复制此文件为 .env: cp .env.example .env
+#   2. 按照下面的说明填写每个配置项
+#   3. 确保 .env 文件已添加到 .gitignore（不要提交到版本控制）
+#
+# 安全提醒：
+#   ⚠️  永远不要将 .env 文件提交到 Git 仓库
+#   ⚠️  定期轮换 API 密钥和 Token
+#   ⚠️  使用强随机密钥
+#   ⚠️  遵循最小权限原则配置 GitHub Token
+#
+# ============================================================================
+
+# ----------------------------------------------------------------------------
+# 1. GitHub Webhook 密钥
+# ----------------------------------------------------------------------------
+#
+# 用途：验证 GitHub Webhook 请求的来源，确保请求确实来自 GitHub
+#
+# 获取方法（三选一）：
+#
+#   方法 1 - 使用 OpenSSL（推荐）：
+#   $ openssl rand -hex 32
+#
+#   方法 2 - 使用 Python：
+#   $ python -c "import secrets; print(secrets.token_hex(32))"
+#
+#   方法 3 - 使用在线工具：
+#   访问 https://www.grc.com/passwords.htm 生成随机密码
+#
+# 配置步骤：
+#   1. 使用上述方法之一生成一个强随机密钥（至少 64 个字符）
+#   2. 将生成的密钥填写到下方（保留引号）
+#   3. 在 GitHub 仓库设置 Webhook 时，使用相同的密钥
+#
+# 重要：此密钥必须与 GitHub Webhook 配置中的 Secret 完全一致
+#
 GITHUB_WEBHOOK_SECRET=CHANGE_ME_GENERATE_STRONG_RANDOM_SECRET
+
+
+# ----------------------------------------------------------------------------
+# 2. GitHub Personal Access Token (PAT)
+# ----------------------------------------------------------------------------
+#
+# 用途：授权服务访问您的 GitHub 仓库（创建 PR、添加评论等）
+#
+# 🆕 2025 年更新：GitHub Fine-grained PATs 已正式发布
+# Fine-grained tokens 提供更细粒度的权限控制，安全性更好
+#
+# 获取步骤：
+#
+#   1. 访问 GitHub 并登录
+#      https://github.com
+#
+#   2. 进入设置页面
+#      点击右上角头像 → Settings
+#
+#   3. 进入开发者设置
+#      左侧菜单最下方 → Developer settings
+#
+#   4. 选择 Personal access tokens → Fine-grained tokens
+#      注意：Fine-grained tokens 比 Classic tokens 更安全
+#
+#   5. 点击 "Generate new token"（或 "Generate new token (classic)"）
+#
+#   6. 配置 Token：
+#      - Name: ai-dev-scheduler (或任意描述性名称)
+#      - Expiration: 选择过期时间（建议 90 天或更短）
+#      - Description: 可选，添加用途说明
+#
+#   7. 配置权限（Repository access）：
+#      选择 "Only select repositories" → 选择您的目标仓库
+#
+#   8. 配置权限（Permissions）：
+#      必需权限：
+#      ✅ Contents (读写): Read and write
+#      ✅ Pull requests (读写): Read and write
+#      ✅ Issues (读写): Read and write
+#
+#      可选权限：
+#      ⚪ Metadata (只读): Read-only (自动添加)
+#
+#   9. 点击 "Generate token" 创建
+#
+#   10. ⚠️ 重要：复制 Token（只显示一次！）
+#       Token 格式：github_pat_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+#
+# 参考文档：
+# - [GitHub 官方文档：管理 Personal Access Tokens](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens)
+# - [GitHub Blog：Fine-grained PATs 正式发布](https://github.blog/changelog/2025-03-18-fine-grained-pats-are-now-generally-available/)
+#
 GITHUB_TOKEN=ghp_CHANGE_ME_YOUR_GITHUB_PERSONAL_ACCESS_TOKEN
+
+
+# ----------------------------------------------------------------------------
+# 3. GitHub 仓库信息
+# ----------------------------------------------------------------------------
+#
+# 用途：指定要操作的 GitHub 仓库
+#
+# 获取方法：
+#
+#   1. 访问您的 GitHub 仓库页面
+#      例如：https://github.com/username/repository-name
+#
+#   2. GITHUB_REPO_OWNER 是仓库所有者的用户名
+#      例如：https://github.com/octocat/Hello-World
+#           repo_owner = "octocat"
+#
+#   3. GITHUB_REPO_NAME 是仓库名称（不含所有者）
+#      例如：https://github.com/octocat/Hello-World
+#           repo_name = "Hello-World"
+#
+# 示例：
+#   仓库：https://github.com/johndoe/my-project
+#   GITHUB_REPO_OWNER=johndoe
+#   GITHUB_REPO_NAME=my-project
+#
 GITHUB_REPO_OWNER=CHANGE_ME_YOUR_GITHUB_USERNAME
 GITHUB_REPO_NAME=CHANGE_ME_YOUR_REPOSITORY_NAME
 
-# 代码仓库路径
-# ⚠️  请替换为实际的本地仓库绝对路径
+
+# ----------------------------------------------------------------------------
+# 4. 本地代码仓库路径
+# ----------------------------------------------------------------------------
+#
+# 用途：指定本地 Git 仓库的绝对路径，用于 Claude Code 进行开发
+#
+# 配置要求：
+#   ✅ 必须是绝对路径（不能是相对路径）
+#   ✅ 路径必须存在
+#   ✅ 必须是一个有效的 Git 仓库（包含 .git 目录）
+#   ✅ 使用 / 分隔符（包括 Windows）
+#
+# 获取方法：
+#
+#   macOS/Linux:
+#   $ pwd  # 在仓库目录中执行
+#   $ cd /path/to/your/repo && pwd
+#
+#   Windows (Git Bash / WSL):
+#   $ pwd
+#   $ cd c:/path/to/your/repo && pwd
+#
+#   Windows (PowerShell):
+#   > Get-Location
+#   > cd C:\path\to\your\repo
+#
+# 示例：
+#   macOS/Linux:   /Users/username/projects/my-repo
+#   Windows:       C:/Users/username/projects/my-repo
+#   Windows (WSL): /mnt/c/Users/username/projects/my-repo
+#
 REPO_PATH=/CHANGE_ME/absolute/path/to/your/local/repo
 
-# Anthropic API Key (Claude Code 需要)
-# ⚠️  请替换为实际的 Anthropic API Key
+
+# ----------------------------------------------------------------------------
+# 5. Anthropic API Key (Claude Code 需要)
+# ----------------------------------------------------------------------------
+#
+# 用途：Claude Code CLI 调用 Claude AI 的 API 密钥
+#
+# ⚠️  注意事项：
+#   - 此环境变量会被 Claude Code CLI 自动读取
+#   - 不需要在 config.yaml 中引用
+#   - 但必须在运行环境中设置
+#
+# 获取步骤：
+#
+#   1. 访问 Anthropic 控制台
+#      https://console.anthropic.com/
+#      或 https://platform.claude.com/
+#
+#   2. 注册或登录账户
+#      - 如果是新用户，需要完成邮箱验证
+#      - ⚠️ Anthropic 有严格的风控，可能需要额外验证
+#
+#   3. 进入 API Keys 页面
+#      左侧菜单 → API Keys
+#
+#   4. 创建 API Key
+#      点击 "Create Key" 按钮
+#
+#   5. 配置 Key（可选）
+#      - Name: 添加描述性名称（如 "ai-dev-scheduler"）
+#      - 资金限制：设置每月预算上限（推荐）
+#      - 创建后可继续编辑
+#
+#   6. 复制 API Key
+#      ⚠️ 重要：API Key 只显示一次，请立即复制并安全保存！
+#      格式：sk-ant-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+#
+#   7. 设置使用限额（强烈推荐）
+#      - 在 API Keys 页面点击您的 key
+#      - 设置 "Usage Limits" 以防止意外超支
+#      - 建议每月限额：$5-$10（根据实际需求调整）
+#
+# 价格参考（2025）：
+#   - Claude 3.5 Sonnet: $3/M input tokens, $15/M output tokens
+#   - Claude 3 Opus: $15/M input tokens, $75/M output tokens
+#
+# 参考文档：
+# - [Anthropic Academy: Claude API 开发指南](https://www.anthropic.com/learn/build-with-claude)
+# - [Claude 控制台](https://platform.claude.com/)
+# - [如何获取 Claude API Key (2025)](https://pickaxe.co/post/how-to-get-your-claude-api-key-a-step-by-step-guide)
+#
 ANTHROPIC_API_KEY=sk-ant-CHANGE_ME_YOUR_ANTHROPIC_API_KEY
 
-# 基本认证（可选）
-# ⚠️  如需启用，请设置强密码
-BASIC_AUTH_USERNAME=admin
-BASIC_AUTH_PASSWORD=CHANGE_ME_SECURE_RANDOM_PASSWORD
+
+# ----------------------------------------------------------------------------
+# 6. 基本认证（可选）
+# ----------------------------------------------------------------------------
+#
+# 用途：为 API 端点添加额外的 HTTP 基本认证层
+#
+# 何时使用：
+#   - 如果服务部署在公网，建议启用
+#   - 如果仅在内网使用，可以不启用
+#
+# 启用步骤：
+#   1. 将 config/config.yaml 中的 security.enable_basic_auth 设置为 true
+#   2. 在下方设置用户名和密码
+#
+# 安全建议：
+#   ✅ 用户名避免使用 "admin" 等常见值
+#   ✅ 密码至少 16 个字符，包含大小写字母、数字和特殊字符
+#   ✅ 使用密码生成器：openssl rand -base64 16
+#
+# 生成强密码：
+#   $ openssl rand -base64 16
+#   或
+#   $ python -c "import secrets; print(secrets.token_urlsafe(16))"
+#
+# BASIC_AUTH_USERNAME=admin
+# BASIC_AUTH_PASSWORD=CHANGE_ME_SECURE_RANDOM_PASSWORD
+
+
+# ----------------------------------------------------------------------------
+# 7. 通知配置（可选）
+# ----------------------------------------------------------------------------
 
 # Slack 通知（可选）
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/CHANGE_ME/WEBHOOK/URL
+# 用途：任务完成或失败时发送 Slack 通知
+#
+# 获取步骤：
+#   1. 访问 Slack App 配置页面
+#      https://api.slack.com/apps
+#
+#   2. 创建新 App 或使用现有 App
+#
+#   3. 启用 Incoming Webhooks
+#      Features → Incoming Webhooks → Activate
+#
+#   4. 创建 Webhook
+#      点击 "Add New Webhook to Workspace"
+#      选择目标频道
+#      复制 Webhook URL
+#
+#   5. 在 config.yaml 中启用通知
+#      notifications.enabled = true
+#      notifications.slack.enabled = true
+#
+# SLACK_WEBHOOK_URL=https://hooks.slack.com/services/CHANGE_ME/WEBHOOK/URL
+
 
 # Telegram 通知（可选）
-TELEGRAM_BOT_TOKEN=CHANGE_ME_YOUR_BOT_TOKEN
-TELEGRAM_CHAT_ID=CHANGE_ME_YOUR_CHAT_ID
+# 用途：任务完成或失败时发送 Telegram 通知
+#
+# 获取步骤：
+#   1. 在 Telegram 中与 @BotFather 对话
+#
+#   2. 创建新 Bot
+#      发送 /newbot
+#      按提示设置 bot 名称
+#
+#   3. 获取 Bot Token
+#      BotFather 会返回 token，格式：
+#      123456789:ABCdefGhIJKlmnoPQRstuvWxYZ
+#
+#   4. 获取 Chat ID
+#      方法 1 - 发送消息给 bot，然后访问：
+#      https://api.telegram.org/bot<YOUR_BOT_TOKEN>/getUpdates
+#
+#      方法 2 - 使用 @userinfobot 获取
+#
+#   5. 在 config.yaml 中启用通知
+#      notifications.enabled = true
+#      notifications.telegram.enabled = true
+#
+# TELEGRAM_BOT_TOKEN=CHANGE_ME_YOUR_BOT_TOKEN
+# TELEGRAM_CHAT_ID=CHANGE_ME_YOUR_CHAT_ID
+
+
+# ============================================================================
+# 配置验证
+# ============================================================================
+#
+# 配置完成后，请执行以下步骤验证：
+#
+#   1. 检查 .env 文件语法
+#      确保没有多余的空格，所有值都已填写
+#
+#   2. 测试配置加载
+#      $ python -c "from app.config import load_config; print(load_config())"
+#
+#   3. 验证仓库路径
+#      $ ls $REPO_PATH
+#      $ git -C $REPO_PATH status
+#
+#   4. 测试 GitHub Token
+#      $ curl -H "Authorization: token $GITHUB_TOKEN" \
+#        https://api.github.com/user/repos
+#
+#   5. 启动服务
+#      $ ./scripts/dev.sh
+#
+# ============================================================================
+# 故障排查
+# ============================================================================
+#
+# 问题：配置未加载
+# 解决：确保 .env 文件在项目根目录，且包含所有必需的配置项
+#
+# 问题：仓库路径无效
+# 解决：使用绝对路径，确保路径存在且是 Git 仓库
+#
+# 问题：GitHub Token 无效
+# 解决：检查 Token 是否过期，权限是否正确配置
+#
+# 问题：Webhook 验证失败
+# 解决：确保 GITHUB_WEBHOOK_SECRET 与 GitHub Webhook 配置完全一致
+#
+# 问题：Claude Code 无法连接
+# 解决：确保 ANTHROPIC_API_KEY 正确，且账户有足够余额
+#
+# ============================================================================
+# 安全最佳实践
+# ============================================================================
+#
+# 1. 文件权限
+#    $ chmod 600 .env  # 仅所有者可读写
+#
+# 2. Git 忽略
+#    确保 .gitignore 包含：
+#    .env
+#    .env.local
+#    .env.*.local
+#
+# 3. 密钥轮换
+#    - GitHub Token: 每 90 天轮换一次
+#    - Webhook Secret: 每 6 个月轮换一次
+#    - Anthropic API Key: 每年轮换一次（如怀疑泄露立即轮换）
+#
+# 4. 监控使用
+#    - 定期检查 GitHub Token 使用情况
+#    - 监控 Anthropic API 使用量和费用
+#    - 设置告警阈值
+#
+# 5. 最小权限原则
+#    - GitHub Token 仅授予必需的仓库和权限
+#    - Anthropic API Key 设置使用限额
+#
+# ============================================================================
+# 参考资源
+# ============================================================================
+#
+# - GitHub Personal Access Tokens:
+#   https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens
+#
+# - GitHub Webhooks:
+#   https://docs.github.com/en/developers/webhooks-and-events/webhooks/about-webhooks
+#
+# - Anthropic Claude API:
+#   https://docs.anthropic.com/claude/reference/
+#
+# - 环境变量最佳实践:
+#   https://12factor.net/config
+#
+# ============================================================================
