--- a/config/config.yaml
+++ b/config/config.yaml
@@ -38,9 +38,12 @@ claude:
   # 是否自动运行测试
   auto_test: true
   # Claude Code CLI 路径（如果不在 PATH 中）
-  cli_path: "claude-code"
+  cli_path: "claude"
   # 工作目录覆盖（可选）
   cwd: null
+  # 是否跳过权限检查（dangerously-skip-permissions）
+  # 默认为 true，以便 Claude 可以执行更多操作
+  dangerously_skip_permissions: true
   # 注意：ANTHROPIC_API_KEY 环境变量需要在系统环境中设置
   # Claude Code CLI 会自动读取此环境变量，不需要在配置文件中引用
   # 详见 .env.example 文件中的配置说明
