--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,12 @@ python-dotenv>=1.0.0,<2.0.0
 pydantic>=2.5.0,<3.0.0
 pydantic-settings>=2.1.0,<3.0.0
 
+# 数据库
+sqlalchemy>=2.0.0,<3.0.0
+
+# 模板引擎
+jinja2>=3.1.2,<4.0.0
+
 # 安全性
 cryptography>=41.0.7,<42.0.0
 
