Refactor logging setup and configuration validation
- Enhanced logging setup to handle configuration loading failures gracefully, using default values when necessary.
- Introduced configuration validity checks for GitHub Token, repository information, local repository path, and Webhook Secret.
- Removed Anthropic API Key from configuration and related files, transitioning to Claude Code CLI for API management.
- Updated lifespan management to ensure application requires configuration before starting.
- Removed the configuration wizard HTML template and related scripts.
- Adjusted documentation to reflect changes in configuration requirements and removed references to Anthropic API Key.
- Updated tests to remove references to Anthropic API Key and added async validation for GitHub Token.

--- a/.env.example
+++ b/.env.example
@@ -159,60 +159,7 @@ REPO_PATH=/CHANGE_ME/absolute/path/to/your/local/repo
 
 
 # ----------------------------------------------------------------------------
-# 5. Anthropic API Key (Claude Code 需要)
-# ----------------------------------------------------------------------------
-#
-# 用途：Claude Code CLI 调用 Claude AI 的 API 密钥
-#
-# ⚠️  注意事项：
-#   - 此环境变量会被 Claude Code CLI 自动读取
-#   - 不需要在 config.yaml 中引用
-#   - 但必须在运行环境中设置
-#
-# 获取步骤：
-#
-#   1. 访问 Anthropic 控制台
-#      https://console.anthropic.com/
-#      或 https://platform.claude.com/
-#
-#   2. 注册或登录账户
-#      - 如果是新用户，需要完成邮箱验证
-#      - ⚠️ Anthropic 有严格的风控，可能需要额外验证
-#
-#   3. 进入 API Keys 页面
-#      左侧菜单 → API Keys
-#
-#   4. 创建 API Key
-#      点击 "Create Key" 按钮
-#
-#   5. 配置 Key（可选）
-#      - Name: 添加描述性名称（如 "ai-dev-scheduler"）
-#      - 资金限制：设置每月预算上限（推荐）
-#      - 创建后可继续编辑
-#
-#   6. 复制 API Key
-#      ⚠️ 重要：API Key 只显示一次，请立即复制并安全保存！
-#      格式：sk-ant-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-#
-#   7. 设置使用限额（强烈推荐）
-#      - 在 API Keys 页面点击您的 key
-#      - 设置 "Usage Limits" 以防止意外超支
-#      - 建议每月限额：$5-$10（根据实际需求调整）
-#
-# 价格参考（2025）：
-#   - Claude 3.5 Sonnet: $3/M input tokens, $15/M output tokens
-#   - Claude 3 Opus: $15/M input tokens, $75/M output tokens
-#
-# 参考文档：
-# - [Anthropic Academy: Claude API 开发指南](https://www.anthropic.com/learn/build-with-claude)
-# - [Claude 控制台](https://platform.claude.com/)
-# - [如何获取 Claude API Key (2025)](https://pickaxe.co/post/how-to-get-your-claude-api-key-a-step-by-step-guide)
-#
-ANTHROPIC_API_KEY=sk-ant-CHANGE_ME_YOUR_ANTHROPIC_API_KEY
-
-
-# ----------------------------------------------------------------------------
-# 6. 基本认证（可选）
+# 5. 基本认证（可选）
 # ----------------------------------------------------------------------------
 #
 # 用途：为 API 端点添加额外的 HTTP 基本认证层
@@ -335,7 +282,7 @@ ANTHROPIC_API_KEY=sk-ant-CHANGE_ME_YOUR_ANTHROPIC_API_KEY
 # 解决：确保 GITHUB_WEBHOOK_SECRET 与 GitHub Webhook 配置完全一致
 #
 # 问题：Claude Code 无法连接
-# 解决：确保 ANTHROPIC_API_KEY 正确，且账户有足够余额
+# 解决：确保 Claude Code CLI 已正确安装并配置（运行 claude --version 检查）
 #
 # ============================================================================
 # 安全最佳实践
@@ -353,16 +300,13 @@ ANTHROPIC_API_KEY=sk-ant-CHANGE_ME_YOUR_ANTHROPIC_API_KEY
 # 3. 密钥轮换
 #    - GitHub Token: 每 90 天轮换一次
 #    - Webhook Secret: 每 6 个月轮换一次
-#    - Anthropic API Key: 每年轮换一次（如怀疑泄露立即轮换）
 #
 # 4. 监控使用
 #    - 定期检查 GitHub Token 使用情况
-#    - 监控 Anthropic API 使用量和费用
 #    - 设置告警阈值
 #
 # 5. 最小权限原则
 #    - GitHub Token 仅授予必需的仓库和权限
-#    - Anthropic API Key 设置使用限额
 #
 # ============================================================================
 # 参考资源
@@ -374,8 +318,8 @@ ANTHROPIC_API_KEY=sk-ant-CHANGE_ME_YOUR_ANTHROPIC_API_KEY
 # - GitHub Webhooks:
 #   https://docs.github.com/en/developers/webhooks-and-events/webhooks/about-webhooks
 #
-# - Anthropic Claude API:
-#   https://docs.anthropic.com/claude/reference/
+# - Claude Code CLI:
+#   https://docs.anthropic.com/en/docs/claude-code/overview
 #
 # - 环境变量最佳实践:
 #   https://12factor.net/config
