feat: 将项目名称从 ai-dev-scheduler 更改为 kaka，更新相关文档和配置

--- a/.env.example
+++ b/.env.example
@@ -68,7 +68,7 @@ GITHUB_WEBHOOK_SECRET=CHANGE_ME_GENERATE_STRONG_RANDOM_SECRET
 #   5. 点击 "Generate new token"（或 "Generate new token (classic)"）
 #
 #   6. 配置 Token：
-#      - Name: ai-dev-scheduler (或任意描述性名称)
+#      - Name: kaka (或任意描述性名称)
 #      - Expiration: 选择过期时间（建议 90 天或更短）
 #      - Description: 可选，添加用途说明
 #
