--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pytest>=7.4.3,<8.0.0
 pytest-asyncio>=0.21.1,<1.0.0
 pytest-cov>=4.1.0,<5.0.0
 pytest-mock>=3.12.0,<4.0.0
+httpx>=0.25.0,<1.0.0
 
 # 开发工具
 pre-commit>=3.6.0,<4.0.0
