feat: add dev_setup.sh for environment initialization, API documentation, and publishing guide
- Created a new script `dev_setup.sh` for setting up the development environment, including Python version checks, virtual environment creation, and package installation.
- Added comprehensive API documentation in `API.md`, detailing endpoints for configuration, tasks, logs, health checks, and webhooks.
- Introduced a publishing guide in `PUBLISHING.md` for releasing Kaka Auto to PyPI, including prerequisites, versioning, and common troubleshooting.
- Implemented a basic `setup.py` for compatibility with editable installs and setuptools.

--- a/.env.example
+++ b/.env.example
@@ -263,7 +263,7 @@ REPO_PATH=/CHANGE_ME/absolute/path/to/your/local/repo
 #        https://api.github.com/user/repos
 #
 #   5. 启动服务
-#      $ ./scripts/dev.sh
+#      $ kaka start
 #
 # ============================================================================
 # 故障排查
